update security of project